// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Npm package tests can be analyzed for a zero dependency library 1`] = `
Array [
  Object {
    "fanIn": 10000,
    "fanOut": 0,
    "instability": 0,
    "label": "Stable",
    "name": "lodash",
  },
]
`;

exports[`Npm package tests can be analyzed for multiple packages 1`] = `
Array [
  Object {
    "fanIn": 10000,
    "fanOut": 1,
    "instability": 0.00009999000099990002,
    "label": "Stable",
    "name": "react",
  },
  Object {
    "fanIn": 10000,
    "fanOut": 5,
    "instability": 0.0004997501249375312,
    "label": "Stable",
    "name": "vue",
  },
]
`;

exports[`Npm package tests can be analyzed for multiple packages with the package version 1`] = `
Array [
  Object {
    "fanIn": 10000,
    "fanOut": 1,
    "instability": 0.00009999000099990002,
    "label": "Stable",
    "name": "react",
  },
  Object {
    "fanIn": 10000,
    "fanOut": 5,
    "instability": 0.0004997501249375312,
    "label": "Stable",
    "name": "vue",
  },
]
`;

exports[`Npm package tests can be analyzed for single package 1`] = `
Array [
  Object {
    "fanIn": 10000,
    "fanOut": 1,
    "instability": 0.00009999000099990002,
    "label": "Stable",
    "name": "react",
  },
]
`;
